--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@ map.on("load", function() {
       "type": "line",
       "source": "lineSource",
       'paint': {
-            'line-opacity': 1,
-            'line-color': '#333',
-            'line-width': 3.5
+            'line-opacity': 0.6,
+            'line-color': 'Crimson',
+            'line-width': 3.9
        },
        'layout': {
            'visibility': 'none'
@@ -309,9 +309,9 @@ map.on("load", function() {
       "type": "circle",
       "source": "pointSource",
       'paint': {
-            'circle-radius': 5,
-            'circle-opacity': 1,
-            'circle-color': '#333'
+            'circle-radius': 6,
+            'circle-opacity': 0.8,
+            'circle-color': 'Crimson'
       },
       'layout': {
            // 'visibility': 'none'
