--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@ map.on("load", function() {
       "type": "line",
       "source": "lineSource",
       'paint': {
-            'line-opacity': 0.6,
-            'line-color': 'Crimson',
-            'line-width': 3.9
+            'line-opacity': 0.8,
+            'line-color': 'RoyalBlue',
+            'line-width': 4.0
        },
        'layout': {
            'visibility': 'none'
@@ -311,7 +311,7 @@ map.on("load", function() {
       'paint': {
             'circle-radius': 6,
             'circle-opacity': 0.8,
-            'circle-color': 'Crimson'
+            'circle-color': 'RoyalBlue'
       },
       'layout': {
            // 'visibility': 'none'
