--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ map.on("load", function() {
       "source": "lineSource",
       'paint': {
             'line-opacity': 0.8,
-            'line-color': 'RoyalBlue',
+            'line-color': 'Aquamarine',
             'line-width': 4.0
        },
        'layout': {
@@ -311,7 +311,7 @@ map.on("load", function() {
       'paint': {
             'circle-radius': 6,
             'circle-opacity': 0.8,
-            'circle-color': 'RoyalBlue'
+            'circle-color': 'Aquamarine'
       },
       'layout': {
            // 'visibility': 'none'
