--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@ map.on("load", function() {
       "type": "line",
       "source": "lineSource",
       'paint': {
-            'line-opacity': 0.8,
-            'line-color': 'Aquamarine',
+            'line-opacity': 0.7,
+            'line-color': 'Aqua',
             'line-width': 4.0
        },
        'layout': {
@@ -310,8 +310,8 @@ map.on("load", function() {
       "source": "pointSource",
       'paint': {
             'circle-radius': 6,
-            'circle-opacity': 0.8,
-            'circle-color': 'Aquamarine'
+            'circle-opacity': 0.7,
+            'circle-color': 'Aqua'
       },
       'layout': {
            // 'visibility': 'none'
