--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
         a, a:hover, a:visited {
             color: #0071bc;
         }
+
+        h1{
+          font-size: 30px;
+        }
+
+        h3{
+          font-size: 20px;
+        }
+
+        h2{
+          font-size: 20px;
+        }
+
         #map {
             top:0;
             height: 100vh;
@@ -73,7 +86,7 @@
             opacity: 0.25;
         }
         .step.active {
-            opacity: 0.9;
+            opacity: 1.0;
         }
 
         .step div {
