--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         }
 
         .step div {
-            padding:  25px 50px;
+            padding:  1vh 1vw;
             line-height: 23px;
             font-size: 15px;
         }
