--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         h1{
-          font-size: 30px;
+          font-size: 25px;
         }
 
         h3{
@@ -96,6 +96,10 @@
         }
 
         .step img {
+            width: 100%;
+        }
+
+        .step video {
             width: 100%;
         }
 
