--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
@@ -20,12 +21,19 @@
             color: #0071bc;
         }
 
+        p{
+          font-family: 'Roboto', sans-serif;
+        }
+
         h1{
-          font-size: 25px;
+          font-family: 'PT Serif', serif;
+          font-size: 28px;
+          line-height: 30px;
         }
 
         h3{
-          font-size: 20px;
+          font-family: 'PT Serif', serif;
+          font-size: 23px;
         }
 
         h2{
