--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto|Roboto+Condensed&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
@@ -63,6 +63,39 @@
             line-height: 25px;
             font-size: 15px;
         }
+
+        .map-overlay {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            box-sizing: content-box;
+            background: rgba(255, 255, 255, 0.8);
+            overflow: auto;
+            border-radius: 5px;
+          }
+
+          .map-overlay p{
+            font-family: 'Roboto Condensed', sans-serif;
+            font-size: 1.0em;
+            line-height: 23px;
+            padding: 10px;
+            margin: 0px;
+            }
+
+            .map-overlay img{
+            padding-left: 10px;
+            height:23px;
+            }
+
+          #legend {
+            padding: 10px;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+            line-height: 18px;
+            height: 150px;
+            margin-bottom: 40px;
+            width: 100px;
+          }
+
         #features {
             padding-top: 10vh;
             padding-bottom: 10vh;
@@ -111,6 +144,33 @@
             width: 100%;
         }
 
+        svg {
+          width:150px;
+          padding-left: 10px;
+          padding-top: 5px
+        }
+
+        strong {
+          color: white;
+          background-color: Teal;
+          padding: 3px;
+          border-radius: 5px;
+        }
+
+        strong1 {
+          color: white;
+          background-color: firebrick;
+          padding: 3px;
+          border-radius: 5px;
+        }
+
+        strong2 {
+          color: white;
+          background-color: RebeccaPurple;
+          padding: 3px;
+          border-radius: 5px;
+        }
+
         @media (max-width: 750px) {
             #features {
                 width: 90vw;
@@ -122,6 +182,22 @@
 <body>
 
 <div id="map"></div>
+<div class='map-overlay'><p>
+<strong>Friday, Feb. 28</strong><br>
+Health & Fitness Expo: 10 a.m. - 8 p.m.<br></br>
+<strong1>Saturday, Feb. 29</strong1><br>
+10K & 5K: 7:30 a.m.<br>
+Health & Fitness Expo: 10 a.m. - 6 p.m.<br>
+Little Rockers Kid’s Marathon: 11 a.m.<br></br>
+<strong2>Sunday, March 1</strong2><br>
+Marathon Early Start: 6 a.m.<br>
+Marathon & Half Marathon: 8 a.m</p>
+
+
+<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 111.7 80.1"><defs><style>.cls-1{fill:#fff;}.cls-2{font-size:21px;font-family:Arial-BoldMT, Arial;}.cls-2,.cls-4{font-weight:700;}.cls-3{fill:#e60000;}.cls-4{font-size:12px;font-family:DINAlternate-Bold, DIN Alternate;}.cls-5{letter-spacing:-0.01em;}</style></defs><title>legend</title><rect class="cls-1" x="6" y="32.2" width="14.36" height="21.7"/><text class="cls-2" transform="translate(7.82 50.7)">1</text><rect class="cls-1" x="2.4" width="21.7" height="21.7"/><path class="cls-3" d="M18.2,11.7a1.43,1.43,0,0,0-1.4,1.4h0v5.3H11.6a1.32,1.32,0,0,0-1.3,1.3h0v4A1.32,1.32,0,0,0,11.6,25h5.3v5.3a1.32,1.32,0,0,0,1.3,1.3h4a1.32,1.32,0,0,0,1.3-1.3h0V24.9h5.3a1.32,1.32,0,0,0,1.3-1.3h0v-4a1.32,1.32,0,0,0-1.3-1.3H23.4V13.1a1.32,1.32,0,0,0-1.3-1.3h0l-3.9-.1Z" transform="translate(-7 -10.8)"/><path d="M26.7,79.73a5.17,5.17,0,0,0,.83,1.37L28.61,80a5.65,5.65,0,0,1-.78-1.42l1.07-1.07a5.17,5.17,0,0,0,.83,1.37c.35-.4.74-.79,1.08-1.13A4.78,4.78,0,0,1,30,76.4h0l-.05-.05h0l-.54-.53L22.45,83l-7.14-7.09-.54.54h0l0,0h0a4.57,4.57,0,0,1-.83,1.37L15,78.9a5.17,5.17,0,0,0,.83-1.37l1.12,1.07A4.57,4.57,0,0,1,16.09,80l1.08,1.08A5,5,0,0,0,18,79.68l1.08,1.07a4.81,4.81,0,0,1-.84,1.37l1.08,1.08a4.78,4.78,0,0,0,.83-1.37l1.57,1.56L17.8,87.45l.54.54,4.06-4.06L26.46,88l.54-.54-4.06-4,1.56-1.56a5.17,5.17,0,0,0,.83,1.37l1.08-1.08a4.78,4.78,0,0,1-.83-1.37Z" transform="translate(-7 -10.8)"/><path d="M33.25,79.78c-.44-.3-.88-.64-1.32-.93l-1.07,1.07a12.49,12.49,0,0,0,1.32.93C32.52,80.56,32.86,80.17,33.25,79.78Z" transform="translate(-7 -10.8)"/><path d="M35.89,81.58a12.41,12.41,0,0,0-1.32-.92L33.5,81.73c.44.29.88.64,1.32.93Z" transform="translate(-7 -10.8)"/><path d="M37,82.71l-1.08,1.07a4.36,4.36,0,0,1,.83,1.42l1.08-1.07A6.2,6.2,0,0,0,37,82.71Z" transform="translate(-7 -10.8)"/><path d="M29.73,81.1,30.81,80c-.39-.34-.73-.73-1.08-1.08L28.66,80A12,12,0,0,0,29.73,81.1Z" transform="translate(-7 -10.8)"/><path d="M32.37,82.9l1.08-1.07L32.13,81,31.05,82C31.44,82.32,31.93,82.61,32.37,82.9Z" transform="translate(-7 -10.8)"/><path d="M34.77,82.71l-1.08,1.07c.39.35.74.74,1.08,1.08l1.07-1.08A7.21,7.21,0,0,0,34.77,82.71Z" transform="translate(-7 -10.8)"/><path d="M29.73,81.1l-1.07,1.07A12.49,12.49,0,0,0,30,83.1L31.05,82C30.56,81.68,30.17,81.39,29.73,81.1Z" transform="translate(-7 -10.8)"/><path d="M31.25,84c.44.29.88.64,1.32.93l1.07-1.08a14.14,14.14,0,0,0-1.32-.93C32,83.25,31.64,83.64,31.25,84Z" transform="translate(-7 -10.8)"/><path d="M34.48,87.45l1.07-1.07A5,5,0,0,0,34.72,85L33.64,86A5.9,5.9,0,0,1,34.48,87.45Z" transform="translate(-7 -10.8)"/><path d="M27.48,81.1l-1.07,1.07c.34.39.73.73,1.07,1.08l1.08-1.08Z" transform="translate(-7 -10.8)"/><path d="M29.88,83.1,28.8,84.18l1.32.88L31.2,84C30.81,83.74,30.37,83.39,29.88,83.1Z" transform="translate(-7 -10.8)"/><path d="M32.52,84.91,31.44,86c.4.35.74.74,1.08,1.08L33.6,86A12.18,12.18,0,0,0,32.52,84.91Z" transform="translate(-7 -10.8)"/><path d="M26.41,84.42a12.49,12.49,0,0,0,1.32.93l1.07-1.08c-.44-.29-.88-.63-1.32-.93C27.14,83.64,26.8,84,26.41,84.42Z" transform="translate(-7 -10.8)"/><path d="M29.05,86.23c.44.29.88.63,1.32.93l1.07-1.08a14.14,14.14,0,0,0-1.32-.93A7.81,7.81,0,0,0,29.05,86.23Z" transform="translate(-7 -10.8)"/><path d="M32.28,89.7l1.07-1.08a5.13,5.13,0,0,0-.83-1.41l-1.08,1.07A5.61,5.61,0,0,1,32.28,89.7Z" transform="translate(-7 -10.8)"/><path d="M12.87,78.85a14.14,14.14,0,0,1-1.32.93l1.07,1.07c.44-.29.88-.63,1.32-.93C13.65,79.58,13.26,79.24,12.87,78.85Z" transform="translate(-7 -10.8)"/><path d="M10.23,80.66c-.44.29-.88.63-1.32.92L10,82.66a12.49,12.49,0,0,1,1.32-.93C11,81.39,10.62,81.05,10.23,80.66Z" transform="translate(-7 -10.8)"/><path d="M7,84.13,8.08,85.2a4.82,4.82,0,0,1,.83-1.42L7.83,82.71A8.1,8.1,0,0,0,7,84.13Z" transform="translate(-7 -10.8)"/><path d="M16.19,80,15.12,78.9c-.35.39-.74.73-1.08,1.07l1.08,1.08A7.81,7.81,0,0,0,16.19,80Z" transform="translate(-7 -10.8)"/><path d="M13.8,82,12.72,81l-1.32.88,1.08,1.07Z" transform="translate(-7 -10.8)"/><path d="M11.2,83.83l-1.07-1.07c-.39.34-.73.73-1.08,1.07l1.08,1.08A5.74,5.74,0,0,1,11.2,83.83Z" transform="translate(-7 -10.8)"/><path d="M13.8,82l1.07,1.08c.44-.29.88-.64,1.32-.93L15.12,81.1C14.68,81.39,14.24,81.68,13.8,82Z" transform="translate(-7 -10.8)"/><path d="M11.2,83.83l1.08,1.08A12.49,12.49,0,0,1,13.6,84L12.52,82.9A7.29,7.29,0,0,0,11.2,83.83Z" transform="translate(-7 -10.8)"/><path d="M9.25,86.33l1.07,1.07A5.07,5.07,0,0,1,11.16,86l-1.08-1.07A5.86,5.86,0,0,0,9.25,86.33Z" transform="translate(-7 -10.8)"/><path d="M16.19,82.17l1.08,1.08c.39-.35.73-.74,1.07-1.08L17.27,81.1A7.81,7.81,0,0,1,16.19,82.17Z" transform="translate(-7 -10.8)"/><path d="M13.6,84l1.08,1.08L16,84.18,14.92,83.1C14.48,83.39,14,83.74,13.6,84Z" transform="translate(-7 -10.8)"/><path d="M11.2,86l1.08,1.08c.34-.39.73-.73,1.08-1.08L12.28,85A12.11,12.11,0,0,0,11.2,86Z" transform="translate(-7 -10.8)"/><path d="M17.17,85.35c.44-.29.88-.64,1.32-.93l-1.08-1.08a11.18,11.18,0,0,1-1.32.93A11,11,0,0,0,17.17,85.35Z" transform="translate(-7 -10.8)"/><path d="M14.53,87.16a12.49,12.49,0,0,1,1.32-.93l-1.08-1.08c-.44.3-.88.64-1.32.93A12.22,12.22,0,0,0,14.53,87.16Z" transform="translate(-7 -10.8)"/><path d="M12.62,89.7a5.3,5.3,0,0,1,.83-1.42l-1.07-1.07a4.49,4.49,0,0,0-.83,1.41Z" transform="translate(-7 -10.8)"/><text class="cls-4" transform="translate(36.46 16.12)">Medical station</text><text class="cls-4" transform="translate(36.34 46.53)">Mile mar<tspan class="cls-5" x="44.84" y="0">k</tspan><tspan x="50.92" y="0">er</tspan></text><text class="cls-4" transform="translate(36.59 76.81)">Start/finish</text></svg>
+
+
+</div>
 <div id="story"></div>
 <script src="./config.js"></script>
 <script src="./js/drive.js"></script>
@@ -162,6 +238,7 @@
   })();
 
   </script>
+
 <script>
 
 var layerTypes = {
@@ -291,6 +368,12 @@ var map = new mapboxgl.Map({
     scrollZoom: false,
     transformRequest: transformRequest
 });
+
+// var myLayer = L.mapbox.featureLayer().addTo(map);
+// myLayer.setGeoJSON(geojson);
+//
+// L.mapbox.legendControl({ position: 'topright' }).addLegend('<strong>My walk from the White House to the hill!</strong>').addTo(map);
+
 
 var marker = new mapboxgl.Marker();
 if (config.showMarkers) {
