--- a/index.html
+++ b/index.html
@@ -194,8 +194,71 @@ Marathon Early Start: 6 a.m.<br>
 Marathon & Half Marathon: 8 a.m</p>
 
 
-<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 111.7 80.1"><defs><style>.cls-1{fill:#fff;}.cls-2{font-size:21px;font-family:Arial-BoldMT, Arial;}.cls-2,.cls-4{font-weight:700;}.cls-3{fill:#e60000;}.cls-4{font-size:12px;font-family:DINAlternate-Bold, DIN Alternate;}.cls-5{letter-spacing:-0.01em;}</style></defs><title>legend</title><rect class="cls-1" x="6" y="32.2" width="14.36" height="21.7"/><text class="cls-2" transform="translate(7.82 50.7)">1</text><rect class="cls-1" x="2.4" width="21.7" height="21.7"/><path class="cls-3" d="M18.2,11.7a1.43,1.43,0,0,0-1.4,1.4h0v5.3H11.6a1.32,1.32,0,0,0-1.3,1.3h0v4A1.32,1.32,0,0,0,11.6,25h5.3v5.3a1.32,1.32,0,0,0,1.3,1.3h4a1.32,1.32,0,0,0,1.3-1.3h0V24.9h5.3a1.32,1.32,0,0,0,1.3-1.3h0v-4a1.32,1.32,0,0,0-1.3-1.3H23.4V13.1a1.32,1.32,0,0,0-1.3-1.3h0l-3.9-.1Z" transform="translate(-7 -10.8)"/><path d="M26.7,79.73a5.17,5.17,0,0,0,.83,1.37L28.61,80a5.65,5.65,0,0,1-.78-1.42l1.07-1.07a5.17,5.17,0,0,0,.83,1.37c.35-.4.74-.79,1.08-1.13A4.78,4.78,0,0,1,30,76.4h0l-.05-.05h0l-.54-.53L22.45,83l-7.14-7.09-.54.54h0l0,0h0a4.57,4.57,0,0,1-.83,1.37L15,78.9a5.17,5.17,0,0,0,.83-1.37l1.12,1.07A4.57,4.57,0,0,1,16.09,80l1.08,1.08A5,5,0,0,0,18,79.68l1.08,1.07a4.81,4.81,0,0,1-.84,1.37l1.08,1.08a4.78,4.78,0,0,0,.83-1.37l1.57,1.56L17.8,87.45l.54.54,4.06-4.06L26.46,88l.54-.54-4.06-4,1.56-1.56a5.17,5.17,0,0,0,.83,1.37l1.08-1.08a4.78,4.78,0,0,1-.83-1.37Z" transform="translate(-7 -10.8)"/><path d="M33.25,79.78c-.44-.3-.88-.64-1.32-.93l-1.07,1.07a12.49,12.49,0,0,0,1.32.93C32.52,80.56,32.86,80.17,33.25,79.78Z" transform="translate(-7 -10.8)"/><path d="M35.89,81.58a12.41,12.41,0,0,0-1.32-.92L33.5,81.73c.44.29.88.64,1.32.93Z" transform="translate(-7 -10.8)"/><path d="M37,82.71l-1.08,1.07a4.36,4.36,0,0,1,.83,1.42l1.08-1.07A6.2,6.2,0,0,0,37,82.71Z" transform="translate(-7 -10.8)"/><path d="M29.73,81.1,30.81,80c-.39-.34-.73-.73-1.08-1.08L28.66,80A12,12,0,0,0,29.73,81.1Z" transform="translate(-7 -10.8)"/><path d="M32.37,82.9l1.08-1.07L32.13,81,31.05,82C31.44,82.32,31.93,82.61,32.37,82.9Z" transform="translate(-7 -10.8)"/><path d="M34.77,82.71l-1.08,1.07c.39.35.74.74,1.08,1.08l1.07-1.08A7.21,7.21,0,0,0,34.77,82.71Z" transform="translate(-7 -10.8)"/><path d="M29.73,81.1l-1.07,1.07A12.49,12.49,0,0,0,30,83.1L31.05,82C30.56,81.68,30.17,81.39,29.73,81.1Z" transform="translate(-7 -10.8)"/><path d="M31.25,84c.44.29.88.64,1.32.93l1.07-1.08a14.14,14.14,0,0,0-1.32-.93C32,83.25,31.64,83.64,31.25,84Z" transform="translate(-7 -10.8)"/><path d="M34.48,87.45l1.07-1.07A5,5,0,0,0,34.72,85L33.64,86A5.9,5.9,0,0,1,34.48,87.45Z" transform="translate(-7 -10.8)"/><path d="M27.48,81.1l-1.07,1.07c.34.39.73.73,1.07,1.08l1.08-1.08Z" transform="translate(-7 -10.8)"/><path d="M29.88,83.1,28.8,84.18l1.32.88L31.2,84C30.81,83.74,30.37,83.39,29.88,83.1Z" transform="translate(-7 -10.8)"/><path d="M32.52,84.91,31.44,86c.4.35.74.74,1.08,1.08L33.6,86A12.18,12.18,0,0,0,32.52,84.91Z" transform="translate(-7 -10.8)"/><path d="M26.41,84.42a12.49,12.49,0,0,0,1.32.93l1.07-1.08c-.44-.29-.88-.63-1.32-.93C27.14,83.64,26.8,84,26.41,84.42Z" transform="translate(-7 -10.8)"/><path d="M29.05,86.23c.44.29.88.63,1.32.93l1.07-1.08a14.14,14.14,0,0,0-1.32-.93A7.81,7.81,0,0,0,29.05,86.23Z" transform="translate(-7 -10.8)"/><path d="M32.28,89.7l1.07-1.08a5.13,5.13,0,0,0-.83-1.41l-1.08,1.07A5.61,5.61,0,0,1,32.28,89.7Z" transform="translate(-7 -10.8)"/><path d="M12.87,78.85a14.14,14.14,0,0,1-1.32.93l1.07,1.07c.44-.29.88-.63,1.32-.93C13.65,79.58,13.26,79.24,12.87,78.85Z" transform="translate(-7 -10.8)"/><path d="M10.23,80.66c-.44.29-.88.63-1.32.92L10,82.66a12.49,12.49,0,0,1,1.32-.93C11,81.39,10.62,81.05,10.23,80.66Z" transform="translate(-7 -10.8)"/><path d="M7,84.13,8.08,85.2a4.82,4.82,0,0,1,.83-1.42L7.83,82.71A8.1,8.1,0,0,0,7,84.13Z" transform="translate(-7 -10.8)"/><path d="M16.19,80,15.12,78.9c-.35.39-.74.73-1.08,1.07l1.08,1.08A7.81,7.81,0,0,0,16.19,80Z" transform="translate(-7 -10.8)"/><path d="M13.8,82,12.72,81l-1.32.88,1.08,1.07Z" transform="translate(-7 -10.8)"/><path d="M11.2,83.83l-1.07-1.07c-.39.34-.73.73-1.08,1.07l1.08,1.08A5.74,5.74,0,0,1,11.2,83.83Z" transform="translate(-7 -10.8)"/><path d="M13.8,82l1.07,1.08c.44-.29.88-.64,1.32-.93L15.12,81.1C14.68,81.39,14.24,81.68,13.8,82Z" transform="translate(-7 -10.8)"/><path d="M11.2,83.83l1.08,1.08A12.49,12.49,0,0,1,13.6,84L12.52,82.9A7.29,7.29,0,0,0,11.2,83.83Z" transform="translate(-7 -10.8)"/><path d="M9.25,86.33l1.07,1.07A5.07,5.07,0,0,1,11.16,86l-1.08-1.07A5.86,5.86,0,0,0,9.25,86.33Z" transform="translate(-7 -10.8)"/><path d="M16.19,82.17l1.08,1.08c.39-.35.73-.74,1.07-1.08L17.27,81.1A7.81,7.81,0,0,1,16.19,82.17Z" transform="translate(-7 -10.8)"/><path d="M13.6,84l1.08,1.08L16,84.18,14.92,83.1C14.48,83.39,14,83.74,13.6,84Z" transform="translate(-7 -10.8)"/><path d="M11.2,86l1.08,1.08c.34-.39.73-.73,1.08-1.08L12.28,85A12.11,12.11,0,0,0,11.2,86Z" transform="translate(-7 -10.8)"/><path d="M17.17,85.35c.44-.29.88-.64,1.32-.93l-1.08-1.08a11.18,11.18,0,0,1-1.32.93A11,11,0,0,0,17.17,85.35Z" transform="translate(-7 -10.8)"/><path d="M14.53,87.16a12.49,12.49,0,0,1,1.32-.93l-1.08-1.08c-.44.3-.88.64-1.32.93A12.22,12.22,0,0,0,14.53,87.16Z" transform="translate(-7 -10.8)"/><path d="M12.62,89.7a5.3,5.3,0,0,1,.83-1.42l-1.07-1.07a4.49,4.49,0,0,0-.83,1.41Z" transform="translate(-7 -10.8)"/><text class="cls-4" transform="translate(36.46 16.12)">Medical station</text><text class="cls-4" transform="translate(36.34 46.53)">Mile mar<tspan class="cls-5" x="44.84" y="0">k</tspan><tspan x="50.92" y="0">er</tspan></text><text class="cls-4" transform="translate(36.59 76.81)">Start/finish</text></svg>
-
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 23.0.4, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 117 95" style="enable-background:new 0 0 117 95;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#FFFFFF;}
+	.st1{font-family:'Arial-BoldMT';}
+	.st2{font-size:21px;}
+	.st3{fill:#E60000;}
+	.st4{font-family:'DINAlternate-Bold';}
+	.st5{font-size:12px;}
+	.st6{fill:#0071BC;}
+	.st7{font-size:16px;}
+</style>
+<rect x="11" y="78" class="st0" width="16" height="16"/>
+<rect x="8" y="30" class="st0" width="17" height="21.7"/>
+<text transform="matrix(1 0 0 1 10.8159 48.4991)" class="st1 st2">1</text>
+<rect x="5.4" y="2.8" class="st0" width="21.7" height="21.7"/>
+<path class="st3" d="M14.2,3.7c-0.7,0-1.4,0.6-1.4,1.4l0,0v5.3H7.6c-0.7,0-1.3,0.6-1.3,1.3l0,0v4c0,0.7,0.6,1.3,1.3,1.3l0,0h5.3v5.3
+	c0,0.7,0.6,1.3,1.3,1.3l0,0h4c0.7,0,1.3-0.6,1.3-1.3l0,0v-5.4h5.3c0.7,0,1.3-0.6,1.3-1.3l0,0v-4c0-0.7-0.6-1.3-1.3-1.3l0,0h-5.4V5.1
+	c0-0.7-0.6-1.3-1.3-1.3l0,0L14.2,3.7L14.2,3.7z"/>
+<g>
+	<path d="M21.7,61.7c0.2,0.5,0.5,1,0.8,1.4c0.4-0.4,0.7-0.7,1.1-1.1c-0.3-0.4-0.6-0.9-0.8-1.4l1.1-1.1c0.2,0.5,0.5,1,0.8,1.4
+		c0.3-0.4,0.7-0.8,1.1-1.1c-0.3-0.4-0.6-0.9-0.8-1.4l0,0l0,0l0,0l-0.5-0.5L17.4,65l-7.1-7.1l-0.5,0.5l0,0l0,0l0,0
+		c-0.2,0.5-0.5,1-0.8,1.4c0.4,0.4,0.7,0.7,1.1,1.1c0.3-0.4,0.6-0.9,0.8-1.4l1.1,1.1c-0.2,0.5-0.5,1-0.8,1.4c0.4,0.4,0.7,0.7,1.1,1.1
+		c0.3-0.4,0.6-0.9,0.8-1.4l1.1,1.1c-0.2,0.5-0.5,1-0.8,1.4c0.4,0.4,0.7,0.7,1.1,1.1c0.3-0.4,0.6-0.9,0.8-1.4l1.6,1.6l-3.9,4.1
+		l0.5,0.5l4.1-4.1l4.1,4.1l0.5-0.5l-4.1-4l1.6-1.6c0.2,0.5,0.5,1,0.8,1.4c0.4-0.4,0.7-0.7,1.1-1.1c-0.3-0.4-0.6-0.9-0.8-1.4
+		L21.7,61.7z"/>
+	<path d="M28.3,61.8c-0.4-0.3-0.9-0.6-1.3-0.9c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.9,0.6,1.3,0.9C27.5,62.6,27.9,62.2,28.3,61.8z"/>
+	<path d="M30.9,63.6c-0.4-0.3-0.9-0.6-1.3-0.9c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.9,0.6,1.3,0.9C30.1,64.4,30.5,64,30.9,63.6z"/>
+	<path d="M32,64.7c-0.4,0.4-0.7,0.7-1.1,1.1c0.3,0.4,0.6,0.9,0.8,1.4c0.4-0.4,0.7-0.7,1.1-1.1C32.6,65.6,32.3,65.1,32,64.7z"/>
+	<path d="M24.7,63.1c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.7-0.7-1.1-1.1c-0.4,0.4-0.7,0.7-1.1,1.1C24,62.4,24.3,62.8,24.7,63.1z"/>
+	<path d="M27.4,64.9c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.9-0.6-1.3-0.9c-0.4,0.4-0.7,0.7-1.1,1.1C26.4,64.3,26.9,64.6,27.4,64.9z"/>
+	<path d="M29.8,64.7c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.7,0.7,1.1,1.1c0.4-0.4,0.7-0.7,1.1-1.1C30.6,65.4,30.2,65.1,29.8,64.7z"/>
+	<path d="M24.7,63.1c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1C25.6,63.7,25.2,63.4,24.7,63.1z"/>
+	<path d="M26.2,66c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.9-0.6-1.3-0.9C27,65.2,26.6,65.6,26.2,66z"/>
+	<path d="M29.5,69.5c0.4-0.4,0.7-0.7,1.1-1.1c-0.2-0.5-0.5-1-0.8-1.4c-0.4,0.4-0.7,0.7-1.1,1.1C29,68.5,29.3,69,29.5,69.5z"/>
+	<path d="M22.5,63.1c-0.4,0.4-0.7,0.7-1.1,1.1c0.3,0.4,0.7,0.7,1.1,1.1c0.4-0.4,0.7-0.7,1.1-1.1C23.2,63.8,22.9,63.5,22.5,63.1z"/>
+	<path d="M24.9,65.1c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1C25.8,65.7,25.4,65.4,24.9,65.1z"/>
+	<path d="M27.5,66.9c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.7,0.7,1.1,1.1c0.4-0.4,0.7-0.7,1.1-1.1C28.3,67.6,28,67.3,27.5,66.9z"/>
+	<path d="M21.4,66.4c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.9-0.6-1.3-0.9C22.1,65.6,21.8,66,21.4,66.4z"/>
+	<path d="M24,68.2c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.9-0.6-1.3-0.9C24.7,67.4,24.4,67.8,24,68.2z"/>
+	<path d="M27.3,71.7c0.4-0.4,0.7-0.7,1.1-1.1c-0.2-0.5-0.5-1-0.8-1.4c-0.4,0.4-0.7,0.7-1.1,1.1C26.8,70.7,27,71.2,27.3,71.7z"/>
+	<path d="M7.9,60.8c-0.4,0.3-0.9,0.6-1.3,0.9c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.9-0.6,1.3-0.9C8.6,61.6,8.3,61.2,7.9,60.8z"/>
+	<path d="M5.2,62.7c-0.4,0.3-0.9,0.6-1.3,0.9C4.3,64,4.6,64.3,5,64.7c0.4-0.3,0.9-0.6,1.3-0.9C6,63.4,5.6,63,5.2,62.7z"/>
+	<path d="M2,66.1c0.4,0.4,0.7,0.7,1.1,1.1c0.2-0.5,0.5-1,0.8-1.4c-0.4-0.4-0.7-0.7-1.1-1.1C2.5,65.1,2.2,65.6,2,66.1z"/>
+	<path d="M11.2,62c-0.4-0.4-0.7-0.7-1.1-1.1C9.8,61.3,9.4,61.6,9,62c0.4,0.4,0.7,0.7,1.1,1.1C10.5,62.8,10.8,62.4,11.2,62z"/>
+	<path d="M8.8,64c-0.4-0.4-0.7-0.7-1.1-1.1c-0.4,0.3-0.9,0.6-1.3,0.9c0.4,0.4,0.7,0.7,1.1,1.1C7.9,64.6,8.4,64.3,8.8,64z"/>
+	<path d="M6.2,65.8c-0.4-0.4-0.7-0.7-1.1-1.1c-0.4,0.3-0.7,0.7-1.1,1.1c0.4,0.4,0.7,0.7,1.1,1.1C5.4,66.5,5.8,66.2,6.2,65.8z"/>
+	<path d="M8.8,64c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1C9.7,63.4,9.2,63.7,8.8,64z"/>
+	<path d="M6.2,65.8c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1C7,65.1,6.6,65.5,6.2,65.8z"/>
+	<path d="M4.2,68.3c0.4,0.4,0.7,0.7,1.1,1.1c0.2-0.5,0.5-1,0.8-1.4c-0.4-0.4-0.7-0.7-1.1-1.1C4.7,67.3,4.4,67.8,4.2,68.3z"/>
+	<path d="M11.2,64.2c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.7-0.7,1.1-1.1c-0.4-0.4-0.7-0.7-1.1-1.1C12,63.5,11.6,63.8,11.2,64.2z"/>
+	<path d="M8.6,66c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1C9.5,65.4,9,65.7,8.6,66z"/>
+	<path d="M6.2,68c0.4,0.4,0.7,0.7,1.1,1.1C7.6,68.7,8,68.4,8.4,68C8,67.6,7.6,67.3,7.3,67C6.9,67.3,6.5,67.6,6.2,68z"/>
+	<path d="M12.2,67.3c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1c-0.4,0.3-0.9,0.6-1.3,0.9C11.4,66.6,11.8,67,12.2,67.3z"/>
+	<path d="M9.5,69.2c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1c-0.4,0.3-0.9,0.6-1.3,0.9C8.7,68.4,9.1,68.8,9.5,69.2z"/>
+	<path d="M7.6,71.7c0.2-0.5,0.5-1,0.8-1.4c-0.4-0.4-0.7-0.7-1.1-1.1c-0.3,0.4-0.6,0.9-0.8,1.4C6.8,70.9,7.2,71.3,7.6,71.7z"/>
+</g>
+<text transform="matrix(1 0 0 1 39.4565 18.9189)" class="st4 st5">Medical station</text>
+<text transform="matrix(1 0 0 1 39.3369 44.3271)" class="st4 st5">Mile marker</text>
+<text transform="matrix(1 0 0 1 39.5894 68.6094)" class="st4 st5">Start/finish</text>
+<text transform="matrix(1 0 0 1 39.5894 90.6094)" class="st4 st5">Parking</text>
+<text transform="matrix(1 0 0 1 13.6792 91.749)" class="st6 st1 st7">P</text>
+</svg>
 
 </div>
 <div id="story"></div>
