--- a/index.html
+++ b/index.html
@@ -194,71 +194,70 @@ Marathon Early Start: 6 a.m.<br>
 Marathon & Half Marathon: 8 a.m</p>
 
 
-<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 23.0.4, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 117 95" style="enable-background:new 0 0 117 95;" xml:space="preserve">
+	 viewBox="0 0 117 91.1" style="enable-background:new 0 0 117 91.1;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#FFFFFF;}
 	.st1{font-family:'Arial-BoldMT';}
-	.st2{font-size:21px;}
+	.st2{font-size:16.1085px;}
 	.st3{fill:#E60000;}
 	.st4{font-family:'DINAlternate-Bold';}
 	.st5{font-size:12px;}
 	.st6{fill:#0071BC;}
-	.st7{font-size:16px;}
+	.st7{font-size:14.7838px;}
 </style>
-<rect x="11" y="78" class="st0" width="16" height="16"/>
-<rect x="8" y="30" class="st0" width="17" height="21.7"/>
-<text transform="matrix(1 0 0 1 10.8159 48.4991)" class="st1 st2">1</text>
-<rect x="5.4" y="2.8" class="st0" width="21.7" height="21.7"/>
-<path class="st3" d="M14.2,3.7c-0.7,0-1.4,0.6-1.4,1.4l0,0v5.3H7.6c-0.7,0-1.3,0.6-1.3,1.3l0,0v4c0,0.7,0.6,1.3,1.3,1.3l0,0h5.3v5.3
-	c0,0.7,0.6,1.3,1.3,1.3l0,0h4c0.7,0,1.3-0.6,1.3-1.3l0,0v-5.4h5.3c0.7,0,1.3-0.6,1.3-1.3l0,0v-4c0-0.7-0.6-1.3-1.3-1.3l0,0h-5.4V5.1
-	c0-0.7-0.6-1.3-1.3-1.3l0,0L14.2,3.7L14.2,3.7z"/>
+<rect x="11.6" y="75" class="st0" width="14.8" height="14.8"/>
+<rect x="13.3" y="27.7" class="st0" width="13" height="16.6"/>
+<text transform="matrix(1 0 0 1 15.4595 41.8779)" class="st1 st2">1</text>
+<rect x="11.2" y="2.3" class="st0" width="17.5" height="17.5"/>
+<path class="st3" d="M18.3,3c-0.6,0-1.1,0.5-1.1,1.1l0,0v4.3H13c-0.6,0-1,0.5-1,1l0,0v3.2c0,0.6,0.5,1,1,1l0,0h4.3V18
+	c0,0.6,0.5,1,1,1l0,0h3.2c0.6,0,1-0.5,1-1l0,0v-4.4h4.3c0.6,0,1-0.5,1-1l0,0V9.4c0-0.6-0.5-1-1-1l0,0h-4.4V4.1c0-0.6-0.5-1-1-1l0,0
+	L18.3,3L18.3,3z"/>
 <g>
-	<path d="M21.7,61.7c0.2,0.5,0.5,1,0.8,1.4c0.4-0.4,0.7-0.7,1.1-1.1c-0.3-0.4-0.6-0.9-0.8-1.4l1.1-1.1c0.2,0.5,0.5,1,0.8,1.4
-		c0.3-0.4,0.7-0.8,1.1-1.1c-0.3-0.4-0.6-0.9-0.8-1.4l0,0l0,0l0,0l-0.5-0.5L17.4,65l-7.1-7.1l-0.5,0.5l0,0l0,0l0,0
-		c-0.2,0.5-0.5,1-0.8,1.4c0.4,0.4,0.7,0.7,1.1,1.1c0.3-0.4,0.6-0.9,0.8-1.4l1.1,1.1c-0.2,0.5-0.5,1-0.8,1.4c0.4,0.4,0.7,0.7,1.1,1.1
-		c0.3-0.4,0.6-0.9,0.8-1.4l1.1,1.1c-0.2,0.5-0.5,1-0.8,1.4c0.4,0.4,0.7,0.7,1.1,1.1c0.3-0.4,0.6-0.9,0.8-1.4l1.6,1.6l-3.9,4.1
-		l0.5,0.5l4.1-4.1l4.1,4.1l0.5-0.5l-4.1-4l1.6-1.6c0.2,0.5,0.5,1,0.8,1.4c0.4-0.4,0.7-0.7,1.1-1.1c-0.3-0.4-0.6-0.9-0.8-1.4
-		L21.7,61.7z"/>
-	<path d="M28.3,61.8c-0.4-0.3-0.9-0.6-1.3-0.9c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.9,0.6,1.3,0.9C27.5,62.6,27.9,62.2,28.3,61.8z"/>
-	<path d="M30.9,63.6c-0.4-0.3-0.9-0.6-1.3-0.9c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.9,0.6,1.3,0.9C30.1,64.4,30.5,64,30.9,63.6z"/>
-	<path d="M32,64.7c-0.4,0.4-0.7,0.7-1.1,1.1c0.3,0.4,0.6,0.9,0.8,1.4c0.4-0.4,0.7-0.7,1.1-1.1C32.6,65.6,32.3,65.1,32,64.7z"/>
-	<path d="M24.7,63.1c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.7-0.7-1.1-1.1c-0.4,0.4-0.7,0.7-1.1,1.1C24,62.4,24.3,62.8,24.7,63.1z"/>
-	<path d="M27.4,64.9c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.9-0.6-1.3-0.9c-0.4,0.4-0.7,0.7-1.1,1.1C26.4,64.3,26.9,64.6,27.4,64.9z"/>
-	<path d="M29.8,64.7c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.7,0.7,1.1,1.1c0.4-0.4,0.7-0.7,1.1-1.1C30.6,65.4,30.2,65.1,29.8,64.7z"/>
-	<path d="M24.7,63.1c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1C25.6,63.7,25.2,63.4,24.7,63.1z"/>
-	<path d="M26.2,66c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.9-0.6-1.3-0.9C27,65.2,26.6,65.6,26.2,66z"/>
-	<path d="M29.5,69.5c0.4-0.4,0.7-0.7,1.1-1.1c-0.2-0.5-0.5-1-0.8-1.4c-0.4,0.4-0.7,0.7-1.1,1.1C29,68.5,29.3,69,29.5,69.5z"/>
-	<path d="M22.5,63.1c-0.4,0.4-0.7,0.7-1.1,1.1c0.3,0.4,0.7,0.7,1.1,1.1c0.4-0.4,0.7-0.7,1.1-1.1C23.2,63.8,22.9,63.5,22.5,63.1z"/>
-	<path d="M24.9,65.1c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1C25.8,65.7,25.4,65.4,24.9,65.1z"/>
-	<path d="M27.5,66.9c-0.4,0.4-0.7,0.7-1.1,1.1c0.4,0.3,0.7,0.7,1.1,1.1c0.4-0.4,0.7-0.7,1.1-1.1C28.3,67.6,28,67.3,27.5,66.9z"/>
-	<path d="M21.4,66.4c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.9-0.6-1.3-0.9C22.1,65.6,21.8,66,21.4,66.4z"/>
-	<path d="M24,68.2c0.4,0.3,0.9,0.6,1.3,0.9c0.4-0.4,0.7-0.7,1.1-1.1c-0.4-0.3-0.9-0.6-1.3-0.9C24.7,67.4,24.4,67.8,24,68.2z"/>
-	<path d="M27.3,71.7c0.4-0.4,0.7-0.7,1.1-1.1c-0.2-0.5-0.5-1-0.8-1.4c-0.4,0.4-0.7,0.7-1.1,1.1C26.8,70.7,27,71.2,27.3,71.7z"/>
-	<path d="M7.9,60.8c-0.4,0.3-0.9,0.6-1.3,0.9c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.9-0.6,1.3-0.9C8.6,61.6,8.3,61.2,7.9,60.8z"/>
-	<path d="M5.2,62.7c-0.4,0.3-0.9,0.6-1.3,0.9C4.3,64,4.6,64.3,5,64.7c0.4-0.3,0.9-0.6,1.3-0.9C6,63.4,5.6,63,5.2,62.7z"/>
-	<path d="M2,66.1c0.4,0.4,0.7,0.7,1.1,1.1c0.2-0.5,0.5-1,0.8-1.4c-0.4-0.4-0.7-0.7-1.1-1.1C2.5,65.1,2.2,65.6,2,66.1z"/>
-	<path d="M11.2,62c-0.4-0.4-0.7-0.7-1.1-1.1C9.8,61.3,9.4,61.6,9,62c0.4,0.4,0.7,0.7,1.1,1.1C10.5,62.8,10.8,62.4,11.2,62z"/>
-	<path d="M8.8,64c-0.4-0.4-0.7-0.7-1.1-1.1c-0.4,0.3-0.9,0.6-1.3,0.9c0.4,0.4,0.7,0.7,1.1,1.1C7.9,64.6,8.4,64.3,8.8,64z"/>
-	<path d="M6.2,65.8c-0.4-0.4-0.7-0.7-1.1-1.1c-0.4,0.3-0.7,0.7-1.1,1.1c0.4,0.4,0.7,0.7,1.1,1.1C5.4,66.5,5.8,66.2,6.2,65.8z"/>
-	<path d="M8.8,64c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1C9.7,63.4,9.2,63.7,8.8,64z"/>
-	<path d="M6.2,65.8c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1C7,65.1,6.6,65.5,6.2,65.8z"/>
-	<path d="M4.2,68.3c0.4,0.4,0.7,0.7,1.1,1.1c0.2-0.5,0.5-1,0.8-1.4c-0.4-0.4-0.7-0.7-1.1-1.1C4.7,67.3,4.4,67.8,4.2,68.3z"/>
-	<path d="M11.2,64.2c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.7-0.7,1.1-1.1c-0.4-0.4-0.7-0.7-1.1-1.1C12,63.5,11.6,63.8,11.2,64.2z"/>
-	<path d="M8.6,66c0.4,0.4,0.7,0.7,1.1,1.1c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1C9.5,65.4,9,65.7,8.6,66z"/>
-	<path d="M6.2,68c0.4,0.4,0.7,0.7,1.1,1.1C7.6,68.7,8,68.4,8.4,68C8,67.6,7.6,67.3,7.3,67C6.9,67.3,6.5,67.6,6.2,68z"/>
-	<path d="M12.2,67.3c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1c-0.4,0.3-0.9,0.6-1.3,0.9C11.4,66.6,11.8,67,12.2,67.3z"/>
-	<path d="M9.5,69.2c0.4-0.3,0.9-0.6,1.3-0.9c-0.4-0.4-0.7-0.7-1.1-1.1c-0.4,0.3-0.9,0.6-1.3,0.9C8.7,68.4,9.1,68.8,9.5,69.2z"/>
-	<path d="M7.6,71.7c0.2-0.5,0.5-1,0.8-1.4c-0.4-0.4-0.7-0.7-1.1-1.1c-0.3,0.4-0.6,0.9-0.8,1.4C6.8,70.9,7.2,71.3,7.6,71.7z"/>
+	<path d="M23.9,57.7c0.2,0.5,0.5,0.9,0.7,1.3c0.4-0.4,0.6-0.6,1-1c-0.3-0.4-0.5-0.8-0.7-1.3l1-1c0.2,0.5,0.5,0.9,0.7,1.3
+		c0.3-0.4,0.6-0.7,1-1c-0.3-0.4-0.5-0.8-0.7-1.3l0,0l0,0l0,0l-0.5-0.5L20,60.7l-6.4-6.4l-0.5,0.5l0,0l0,0l0,0
+		c-0.2,0.5-0.5,0.9-0.7,1.3c0.4,0.4,0.6,0.6,1,1c0.3-0.4,0.5-0.8,0.7-1.3l1,1c-0.2,0.5-0.5,0.9-0.7,1.3c0.4,0.4,0.6,0.6,1,1
+		c0.3-0.4,0.5-0.8,0.7-1.3l1,1c-0.2,0.5-0.5,0.9-0.7,1.3c0.4,0.4,0.6,0.6,1,1c0.3-0.4,0.5-0.8,0.7-1.3l1.4,1.4L16,64.8l0.5,0.5
+		l3.7-3.7l3.7,3.7l0.5-0.5l-3.7-3.6l1.4-1.4c0.2,0.5,0.5,0.9,0.7,1.3c0.4-0.4,0.6-0.6,1-1c-0.3-0.4-0.5-0.8-0.7-1.3L23.9,57.7z"/>
+	<path d="M29.8,57.8c-0.4-0.3-0.8-0.5-1.2-0.8c-0.4,0.4-0.6,0.6-1,1c0.4,0.3,0.8,0.5,1.2,0.8C29.1,58.5,29.5,58.1,29.8,57.8z"/>
+	<path d="M32.2,59.4c-0.4-0.3-0.8-0.5-1.2-0.8c-0.4,0.4-0.6,0.6-1,1c0.4,0.3,0.8,0.5,1.2,0.8C31.4,60.1,31.8,59.8,32.2,59.4z"/>
+	<path d="M33.2,60.4c-0.4,0.4-0.6,0.6-1,1c0.3,0.4,0.5,0.8,0.7,1.3c0.4-0.4,0.6-0.6,1-1C33.7,61.2,33.4,60.7,33.2,60.4z"/>
+	<path d="M26.6,58.9c0.4-0.4,0.6-0.6,1-1c-0.4-0.3-0.6-0.6-1-1c-0.4,0.4-0.6,0.6-1,1C25.9,58.3,26.2,58.7,26.6,58.9z"/>
+	<path d="M29,60.6c0.4-0.4,0.6-0.6,1-1c-0.4-0.3-0.8-0.5-1.2-0.8c-0.4,0.4-0.6,0.6-1,1C28.1,60,28.6,60.3,29,60.6z"/>
+	<path d="M31.2,60.4c-0.4,0.4-0.6,0.6-1,1c0.4,0.3,0.6,0.6,1,1c0.4-0.4,0.6-0.6,1-1C31.9,61,31.5,60.7,31.2,60.4z"/>
+	<path d="M26.6,58.9c-0.4,0.4-0.6,0.6-1,1c0.4,0.3,0.8,0.5,1.2,0.8c0.4-0.4,0.6-0.6,1-1C27.4,59.5,27,59.2,26.6,58.9z"/>
+	<path d="M27.9,61.6c0.4,0.3,0.8,0.5,1.2,0.8c0.4-0.4,0.6-0.6,1-1c-0.4-0.3-0.8-0.5-1.2-0.8C28.6,60.8,28.3,61.2,27.9,61.6z"/>
+	<path d="M30.9,64.7c0.4-0.4,0.6-0.6,1-1c-0.2-0.5-0.5-0.9-0.7-1.3c-0.4,0.4-0.6,0.6-1,1C30.5,63.8,30.7,64.3,30.9,64.7z"/>
+	<path d="M24.6,58.9c-0.4,0.4-0.6,0.6-1,1c0.3,0.4,0.6,0.6,1,1c0.4-0.4,0.6-0.6,1-1C25.2,59.6,24.9,59.3,24.6,58.9z"/>
+	<path d="M26.8,60.7c-0.4,0.4-0.6,0.6-1,1c0.4,0.3,0.8,0.5,1.2,0.8c0.4-0.4,0.6-0.6,1-1C27.6,61.3,27.2,61,26.8,60.7z"/>
+	<path d="M29.1,62.4c-0.4,0.4-0.6,0.6-1,1c0.4,0.3,0.6,0.6,1,1c0.4-0.4,0.6-0.6,1-1C29.8,63,29.5,62.7,29.1,62.4z"/>
+	<path d="M23.6,61.9c0.4,0.3,0.8,0.5,1.2,0.8c0.4-0.4,0.6-0.6,1-1c-0.4-0.3-0.8-0.5-1.2-0.8C24.2,61.2,24,61.6,23.6,61.9z"/>
+	<path d="M25.9,63.5c0.4,0.3,0.8,0.5,1.2,0.8c0.4-0.4,0.6-0.6,1-1c-0.4-0.3-0.8-0.5-1.2-0.8C26.6,62.8,26.3,63.2,25.9,63.5z"/>
+	<path d="M28.9,66.7c0.4-0.4,0.6-0.6,1-1c-0.2-0.5-0.5-0.9-0.7-1.3c-0.4,0.4-0.6,0.6-1,1C28.5,65.8,28.6,66.3,28.9,66.7z"/>
+	<path d="M11.4,56.9c-0.4,0.3-0.8,0.5-1.2,0.8c0.4,0.4,0.6,0.6,1,1c0.4-0.3,0.8-0.5,1.2-0.8C12,57.6,11.8,57.2,11.4,56.9z"/>
+	<path d="M9,58.6c-0.4,0.3-0.8,0.5-1.2,0.8c0.4,0.4,0.6,0.6,1,1c0.4-0.3,0.8-0.5,1.2-0.8C9.7,59.2,9.3,58.9,9,58.6z"/>
+	<path d="M6.1,61.7c0.4,0.4,0.6,0.6,1,1c0.2-0.5,0.5-0.9,0.7-1.3c-0.4-0.4-0.6-0.6-1-1C6.5,60.7,6.3,61.2,6.1,61.7z"/>
+	<path d="M14.4,57.9c-0.4-0.4-0.6-0.6-1-1c-0.3,0.4-0.6,0.6-1,1c0.4,0.4,0.6,0.6,1,1C13.8,58.7,14,58.3,14.4,57.9z"/>
+	<path d="M12.2,59.8c-0.4-0.4-0.6-0.6-1-1c-0.4,0.3-0.8,0.5-1.2,0.8c0.4,0.4,0.6,0.6,1,1C11.4,60.3,11.9,60,12.2,59.8z"/>
+	<path d="M9.9,61.4c-0.4-0.4-0.6-0.6-1-1c-0.4,0.3-0.6,0.6-1,1c0.4,0.4,0.6,0.6,1,1C9.1,62,9.5,61.7,9.9,61.4z"/>
+	<path d="M12.2,59.8c0.4,0.4,0.6,0.6,1,1c0.4-0.3,0.8-0.5,1.2-0.8c-0.4-0.4-0.6-0.6-1-1C13,59.2,12.6,59.5,12.2,59.8z"/>
+	<path d="M9.9,61.4c0.4,0.4,0.6,0.6,1,1c0.4-0.3,0.8-0.5,1.2-0.8c-0.4-0.4-0.6-0.6-1-1C10.6,60.7,10.2,61.1,9.9,61.4z"/>
+	<path d="M8.1,63.6c0.4,0.4,0.6,0.6,1,1c0.2-0.5,0.5-0.9,0.7-1.3c-0.4-0.4-0.6-0.6-1-1C8.5,62.7,8.2,63.2,8.1,63.6z"/>
+	<path d="M14.4,59.9c0.4,0.4,0.6,0.6,1,1c0.4-0.3,0.6-0.6,1-1c-0.4-0.4-0.6-0.6-1-1C15.1,59.3,14.7,59.6,14.4,59.9z"/>
+	<path d="M12,61.6c0.4,0.4,0.6,0.6,1,1c0.4-0.3,0.8-0.5,1.2-0.8c-0.4-0.4-0.6-0.6-1-1C12.8,61,12.4,61.3,12,61.6z"/>
+	<path d="M9.9,63.4c0.4,0.4,0.6,0.6,1,1c0.3-0.4,0.6-0.6,1-1c-0.4-0.4-0.7-0.6-1-0.9C10.5,62.7,10.1,63,9.9,63.4z"/>
+	<path d="M15.3,62.7c0.4-0.3,0.8-0.5,1.2-0.8c-0.4-0.4-0.6-0.6-1-1c-0.4,0.3-0.8,0.5-1.2,0.8C14.6,62.1,14.9,62.5,15.3,62.7z"/>
+	<path d="M12.8,64.4c0.4-0.3,0.8-0.5,1.2-0.8c-0.4-0.4-0.6-0.6-1-1c-0.4,0.3-0.8,0.5-1.2,0.8C12.1,63.7,12.5,64.1,12.8,64.4z"/>
+	<path d="M11.1,66.7c0.2-0.5,0.5-0.9,0.7-1.3c-0.4-0.4-0.6-0.6-1-1c-0.3,0.4-0.5,0.8-0.7,1.3C10.4,66,10.8,66.3,11.1,66.7z"/>
 </g>
-<text transform="matrix(1 0 0 1 39.4565 18.9189)" class="st4 st5">Medical station</text>
-<text transform="matrix(1 0 0 1 39.3369 44.3271)" class="st4 st5">Mile marker</text>
-<text transform="matrix(1 0 0 1 39.5894 68.6094)" class="st4 st5">Start/finish</text>
-<text transform="matrix(1 0 0 1 39.5894 90.6094)" class="st4 st5">Parking</text>
-<text transform="matrix(1 0 0 1 13.6792 91.749)" class="st6 st1 st7">P</text>
+<text transform="matrix(1 0 0 1 37.4565 14.9189)" class="st4 st5">Medical station</text>
+<text transform="matrix(1 0 0 1 37.3369 40.3271)" class="st4 st5">Mile marker</text>
+<text transform="matrix(1 0 0 1 37.5894 64.6094)" class="st4 st5">Start/finish</text>
+<text transform="matrix(1 0 0 1 37.5894 86.6094)" class="st4 st5">Parking</text>
+<text transform="matrix(1 0 0 1 14.0385 87.7088)" class="st6 st1 st7">P</text>
 </svg>
+
 
 </div>
 <div id="story"></div>
