--- a/index.html
+++ b/index.html
@@ -23,21 +23,25 @@
 
         p{
           font-family: 'Roboto', sans-serif;
+          color: black
         }
 
         h1{
           font-family: 'PT Serif', serif;
           font-size: 28px;
           line-height: 30px;
+          color: black
         }
 
         h3{
           font-family: 'PT Serif', serif;
           font-size: 23px;
+          color: black
         }
 
         h2{
           font-size: 20px;
+          color: black
         }
 
         #map {
@@ -69,7 +73,7 @@
             top: 10px;
             right: 10px;
             box-sizing: content-box;
-            background: rgba(255, 255, 255, 0.8);
+            background: rgba(204, 204, 205, 0.8);
             overflow: auto;
             border-radius: 5px;
           }
@@ -115,7 +119,7 @@
         }
         .light {
             color: #444;
-            background-color: #fafafa;
+            background-color: #E6E6E6;
         }
         .dark {
             color: #fafafa;
@@ -147,26 +151,25 @@
         svg {
           width:150px;
           padding-left: 5px;
-          padding-top: 5px
         }
 
         strong {
           color: white;
-          background-color: Teal;
+          background-color: DarkSlateBlue;
           padding: 3px;
           border-radius: 5px;
         }
 
         strong1 {
           color: white;
-          background-color: firebrick;
+          background-color: DarkRed;
           padding: 3px;
           border-radius: 5px;
         }
 
         strong2 {
           color: white;
-          background-color: RebeccaPurple;
+          background-color: DarkSlateGrey;
           padding: 3px;
           border-radius: 5px;
         }
@@ -189,10 +192,10 @@ Health & Fitness Expo: 10 a.m. - 8 p.m.<br></br>
 10K & 5K: 7:30 a.m.<br>
 Health & Fitness Expo: 10 a.m. - 6 p.m.<br>
 Little Rockers Kid’s Marathon: 11 a.m.<br></br>
-<strong2>Sunday, March 1</strong2><br>
+<strong2>Sunday, Mar. 1</strong2><br>
 Marathon Early Start: 6 a.m.<br>
 Marathon & Half Marathon: 8 a.m</p>
-
+<hr>
 
 <!-- Generator: Adobe Illustrator 23.0.4, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
