add bootstrap badges

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             padding-bottom: 10vh;
             z-index: 100;
         }
+
         .centered {
             width: 50vw;
             margin: 0 auto;
@@ -160,28 +161,6 @@
           padding-left: 5px;
         }
 
-        strong {
-          color: white;
-          background-color: DarkSlateBlue;
-          padding: 3px;
-          border-radius: 5px;
-        }
-
-        strong1 {
-          color: white;
-          background-color: DarkRed;
-          padding: 3px;
-          border-radius: 5px;
-        }
-
-        strong2 {
-          color: white;
-          background-color: DarkSlateGrey;
-          padding: 3px;
-          border-radius: 5px;
-        }
-
-
 
         @media (max-width: 1850px) {
 
@@ -221,16 +200,15 @@
 <div id="map"></div>
 <div class='map-overlay'>
   <p>
-<strong>Friday, Feb. 28</strong><br>
+<span class="badge badge-primary" style="font-size: 1.0em">Friday, Feb. 28</span><br>
 Health & Fitness Expo: 10 a.m. - 8 p.m.<br></br>
-<strong1>Saturday, Feb. 29</strong1><br>
+<span class="badge badge-success" style="font-size: 1.0em">Saturday, Feb. 29</span><br>
 10K & 5K: 7:30 a.m.<br>
 Health & Fitness Expo: 10 a.m. - 6 p.m.<br>
 Little Rockers Kid’s Marathon: 11 a.m.<br></br>
-<strong2>Sunday, Mar. 1</strong2><br>
+<span class="badge badge-danger" style="font-size: 1.0em">Sunday, Mar. 1</span><br>
 Marathon Early Start: 6 a.m.<br>
 Marathon & Half Marathon: 8 a.m</p>
-<hr>
 
 <!-- Generator: Adobe Illustrator 23.0.4, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
