--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           color: black;
         }
 
+        #footer a:hover {
+          opacity: 0.8;
+        }
+
         h1{
           font-family: 'PT Serif', serif;
           font-size: 28px;
@@ -65,9 +69,11 @@
 
         #footer {
             background-color: #383838;
+            opacity: 0.9;
             padding-bottom: 1vh;
             width:100vw;
             height:auto;
+            /* margin: auto; */
         }
 
         .map-overlay {
@@ -161,6 +167,10 @@
           padding-left: 5px;
         }
 
+        #footer img{
+          padding: 2px;
+        }
+
 
         @media (max-width: 1850px) {
 
@@ -188,11 +198,6 @@
             display:none;
           }
       }
-
-
-
-
-
         </style>
 </head>
 <body>
